# Cpp_Checkers_Core

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: index.md
src/: graphics.cpp  graphics.h  main.cpp  renderObject.cpp  renderObject.h
